# GladiadorGame

./: README.md
GUI Gladiator/: Arrow.cpp  Arrow.h  Botones.cpp  Botones.h  CMakeLists.txt  Entity.cpp  Entity.h  Gladiator.cpp  Gladiator.h  IA.cpp  IA.h  List.h  ListNode.h  Map.cpp  Map.h  Matrix.h  Node.cpp  Node.h  PList.h  PathfindingA.cpp  PathfindingA.h  SeleccionMJ.cpp  SeleccionMJ.h  Sprite.cpp  Sprite.h  Tiled.cpp  Tiled.h  Tower.cpp  Tower.h  gladiador.cpp  gladiador.h  main.cpp
GUI Gladiator/drawable/: Botones.xcf  Pancartas.xcf  Sin nombre.xcf  gladiador (copia).xcf  golpemanooscuro.xcf  golpes1png  peleador (copia).xcf  selectPeleador.xcf
Tablero/: CMakeLists.txt  Gladiator.cpp  Gladiator.h  List.h  Map.cpp  Map.h  Matrix.h  Queen.cpp  Queen.h  VentanaAle.cpp  VentanaAle.h  backtracking.cpp  backtracking.h  main.cpp  texto.txt
arduino/: respaldo funcional del arduino
arduino/ArduinoMatriz8LED/: visor7segmentos.ino
arduino/sketch_apr18a/: sketch_apr18a.ino
